--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: John Doe # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+title: Kevin Moy # your name (or website title) here
+logo: "/images/Project201Logo?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Kevin Moy | UC Berkeley Computer Science + Data Science '21
   <br><br>
   Second description 
   <br><br>
