--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Kevin Moy # your name (or website title) here
-logo: "/images/Project201Logo?raw=true" # your photo (or logo) here
+logo: "/images/Project201Logo.png?raw=true" # FIX MY PHOTO TO UC BERKELEY ONE LATER
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Kevin Moy | UC Berkeley Computer Science + Data Science '21
+  UC Berkeley Computer Science + Data Science '21
   <br><br>
   Second description 
   <br><br>
