--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/Project201Logo.png?raw=true" # FIX MY PHOTO TO UC BERKELEY ONE LA
 description: > # your text below (remove <br> elements if you don't need line breaks)
   UC Berkeley Computer Science + Data Science '21
   <br><br>
-  Second description 
+  Hi! I'm a student at UC Berkeley, studying Data Science and Computer Science.
   <br><br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
